# open-ai-experiments

./: pyproject.toml
packing-advice/: advice-from-openai.py  create-image.py
